advance algos added in week1_labs